Fixes 7DaysLogin/SplashScreen bug on iOS

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -156,10 +156,10 @@ a {
 	opacity: 0.9;
 	filter: alpha(opacity=90);
 }
-#histBlock {
+#histBlock, #infos_map {
 	text-align: left;
 }
-#histBlock ul {
+#histBlock ul, infos_map ul {
 	color: #09F;
 }
 #marquee-wrapper
